syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.common";

package com.glance.spaces.common;

enum SpaceType {
  SPACE_TYPE_UNSPECIFIED = 0;
  NEWS = 1;
  ENTERTAINMENT = 2;
  SHOPPING = 3;
  GAMES = 4;
  SPORTS = 5;
  MY_SPACE = 6;
  HOME = 7;
}